* Add support for mounting volumes on nodes of the tesnet
* Add build for dockerfiles
* Add dockerfiles for Prysm and Lighthouse
* Initial commit with a tool to interface with genesis and a network tester.
