@@ -2,6 +2,7 @@ package genesis
 
 // mapping of blockchain to images
 var Images = map[string][]string{
-	"prysm": []string{"prysm"},
+	"artemis":    []string{"gcr.io/whiteblock/artemis"},
 	"lighthouse": []string{"lighthouse"},
+	"prysm":      []string{"prysm"},
 }
